--- a/public/d/userProfile/templates/user-profile.html
+++ b/public/d/userProfile/templates/user-profile.html
@@ -30,7 +30,7 @@
                                        ng-model="userModel.name.first">
                                     <div ng-messages="profileForm.first.$error" ng-show="profileForm.first.$touched || !profileForm.first.$pristine">
                                        <div class="messagenotify">
-                                          <div ng-messages-include="/mods/partials/messages.html"></div>
+                                          <div ng-messages-include="/public/mods/partials/messages.html"></div>
                                           <div ng-message="md-maxlength">The first name has to be less than 20 characters long.</div>
                                           <div ng-message="minlength">the first name should contain minimum 5 characters</div>
                                        </div>
@@ -42,7 +42,7 @@
                                        ng-model="userModel.name.middle">
                                     <div ng-messages="profileForm.middle.$error" ng-show="profileForm.middle.$touched || !profileForm.middle.$pristine">
                                        <div class="messagenotify">
-                                          <div ng-messages-include="/mods/partials/messages.html"></div>
+                                          <div ng-messages-include="/public/mods/partials/messages.html"></div>
                                           <div ng-message="md-maxlength">The middle name has to be less than 10 characters long.</div>
                                           <div ng-message="minlength">the middle name should contain minimum 5 characters</div>
                                        </div>
@@ -54,7 +54,7 @@
                                        ng-model="userModel.name.last">
                                     <div ng-messages="profileForm.last.$error" ng-show="profileForm.last.$touched || !profileForm.last.$pristine">
                                        <div class="messagenotify">
-                                          <div ng-messages-include="/mods/partials/messages.html"></div>
+                                          <div ng-messages-include="/public/mods/partials/messages.html"></div>
                                           <div ng-message="md-maxlength">The last name has to be less than 20 characters long.</div>
                                           <div ng-message="minlength">the last name should contain minimum 5 characters</div>
                                        </div>
@@ -68,7 +68,7 @@
                                        ng-model="userModel.email">
                                     <div ng-messages="profileForm.email.$error" ng-show="profileForm.email.$touched || !profileForm.email.$pristine">
                                        <div class="messagenotify">
-                                          <div ng-messages-include="/mods/partials/messages.html"></div>
+                                          <div ng-messages-include="/public/mods/partials/messages.html"></div>
                                           <div ng-message="md-maxlength">The email has to be less than 255 characters long.</div>
                                           <div ng-message="minlength">the email should contain minimum 8 characters</div>
                                        </div>
@@ -82,7 +82,7 @@
                                        ng-model="userModel.jobTitle">
                                     <div ng-messages="profileForm.jobTitle.$error" ng-show="profileForm.jobTitle.$touched || !profileForm.jobTitle.$pristine">
                                        <div class="messagenotify">
-                                          <div ng-messages-include="/mods/partials/messages.html"></div>
+                                          <div ng-messages-include="/public/mods/partials/messages.html"></div>
                                           <div ng-message="md-maxlength">The jobTitle has to be less than 40 characters long.</div>
                                           <div ng-message="minlength">the jobTitle should contain minimum 5characters</div>
                                        </div>
@@ -97,7 +97,7 @@
                            rows="4" aria-multiline="true" style="height: 116px;"></textarea>
                         <div ng-messages="profileForm.summary.$error" ng-show="profileForm.summary.$touched || !profileForm.summary.$pristine">
                         <div class="messagenotify">
-                        <div ng-messages-include="/mods/partials/messages.html"></div>
+                        <div ng-messages-include="/public/mods/partials/messages.html"></div>
                         <div ng-message="md-maxlength">The summary has to be less than 2000 characters long.</div>
                         <div ng-message="minlength">the summary should contain minimum 30characters</div></div></div>
                         </md-input-container>
